@@ -7,6 +7,8 @@ hg tip
 * Fix for Mac OS X Framework builds that use
   ``--universal-archs=intel``
 
+* Fix ``activate_this.py`` on Windows
+
 1.4.7
 -----
 
